syntax = "proto3";

option go_package = "pb";

message SimpleRequest{
    string msg = 1;
}

message SimpleResponse{
    string msg = 1;
}

message RegisterUserRequest{
    string name =1;
    string email =2;
    string password =3;
    string gender =4;
}

message RegisterUserResponse{
    string result =1;
}

message LoginUserRequest{
    string email =1;
    string password =2;
}

message LoginUserResponse{
    string token =1;
}

message AboutUserRequest{
    string token =1;
}

message AboutUserResponse{
    string name =1;
    string email =2;
    string gender =3;
}

message UpdateUserRequest{
    string name =1;
    string email =2;
    string gender =3;
    string token =4;
}

message UpdateUserResponse{
    string result =1;
}

message DeleteUserRequest{
    string token =1;
}

message DeleteUserResponse{
    string result =1;
}

service SampleService{ 
    rpc Sample(SimpleRequest) returns (SimpleResponse){};
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse){};
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse){};
    rpc AboutUser(AboutUserRequest) returns (AboutUserResponse){};
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse){};
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse){};
}